Added brush size

--- a/Map Builder/css/layout.css
+++ b/Map Builder/css/layout.css
@@ -22,6 +22,8 @@ body ul input {
 
 body table {
   position: absolute;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
 }
 
 body td {
